Copy and adapt Hibernate ORM's DefaultIdentifierGeneratorFactory